packages/kyvernoPolicies/chart/tests/vpol/disallow-tolerations-cel/chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallow-tolerations-bad
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    command: ["sleep", "1"]
  tolerations:
  - key: "node-role.kubernetes.io/master"
    operator: "Exists"
    effect: "NoSchedule"
