packages/kyvernoPolicies/chart/tests/vpol/disallow-tolerations-cel/chainsaw-test/runtimeclass-bad.yaml
apiVersion: node.k8s.io/v1
kind: RuntimeClass
metadata:
  name: disallow-tolerations-bad-runtimeclass
handler: runc
scheduling:
  tolerations:
  - key: "node-role.kubernetes.io/master"
    operator: "Exists"
    effect: "NoSchedule"
