packages/kyvernoPolicies/chart/tests/vpol/disallow-tolerations-cel/chainsaw-test/runtimeclass-good.yaml
apiVersion: node.k8s.io/v1
kind: RuntimeClass
metadata:
  name: disallow-tolerations-good-runtimeclass
handler: runc
scheduling:
  tolerations:
  - key: "some-other-taint"
    operator: "Equal"
    value: "true"
    effect: "NoSchedule"
